--- a/package.json
+++ b/package.json
@@ -18,26 +18,28 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~2.3.1",
-    "@angular/compiler": "~2.3.1",
-    "@angular/core": "~2.3.1",
-    "@angular/forms": "~2.3.1",
-    "@angular/http": "~2.3.1",
-    "@angular/platform-browser": "~2.3.1",
-    "@angular/platform-browser-dynamic": "~2.3.1",
-    "@angular/router": "~3.3.1",
+    "@angular/animations": "^4.3.5",
+    "@angular/common": "^4.3.5",
+    "@angular/compiler": "^4.3.5",
+    "@angular/core": "^4.3.5",
+    "@angular/forms": "^4.3.5",
+    "@angular/http": "^4.3.5",
+    "@angular/platform-browser": "^4.3.5",
+    "@angular/platform-browser-dynamic": "^4.3.5",
+    "@angular/platform-server": "^4.3.5",
+    "@angular/router": "^4.3.5",
     "angular-in-memory-web-api": "~0.2.1",
-    "systemjs": "0.19.40",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.0.1",
+    "rxjs": "5.2.0",
+    "systemjs": "0.19.40",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.5.36",
+    "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.46",
     "@types/selenium-webdriver": "^2.53.33",
-    "angular-cli": "1.0.0-beta.25.5",
+    "angular-cli": "1.0.0-beta.28.3",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
     "http-server": "^0.9.0",
@@ -49,10 +51,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
-    "protractor": "~4.0.13",
+    "protractor": "~5.1.2",
     "rimraf": "^2.5.4",
     "tslint": "^3.15.1",
-    "typescript": "~2.0.10",
+    "typescript": "~2.2.1",
     "webpack": "^1.14.0"
   },
   "repository": {}
