--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "@angular/platform-browser-dynamic": "^4.3.5",
     "@angular/platform-server": "^4.3.5",
     "@angular/router": "^4.3.5",
-    "angular-in-memory-web-api": "~0.2.1",
+    "angular-in-memory-web-api": "~0.3.2",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "5.2.0",
-    "systemjs": "0.19.40",
-    "zone.js": "^0.7.2"
+    "rxjs": "5.4.3",
+    "systemjs": "0.20.18",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.46",
-    "@types/selenium-webdriver": "^2.53.33",
+    "@types/jasmine": "2.5.53",
+    "@types/node": "^8.0.24",
+    "@types/selenium-webdriver": "^3.0.4",
     "angular-cli": "1.0.0-beta.28.3",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
-    "http-server": "^0.9.0",
-    "jasmine-core": "~2.4.1",
+    "http-server": "^0.10.0",
+    "jasmine-core": "~2.7.0",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -51,11 +51,11 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.4",
-    "protractor": "~5.1.2",
+    "protractor": "^5.1.2",
     "rimraf": "^2.5.4",
-    "tslint": "^3.15.1",
-    "typescript": "~2.2.1",
-    "webpack": "^1.14.0"
+    "tslint": "^5.6.0",
+    "typescript": "~2.4.2",
+    "webpack": "^3.5.5"
   },
   "repository": {}
 }
