--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.4.3",
     "systemjs": "0.20.18",
-    "zone.js": "^0.8.16"
+    "zone.js": "^0.8.16",
+    "@types/openlayers": "^4.1.5",
+    "ol": "^4.3.1"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.53",
