--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-test",
+  "name": "gms-ol",
   "version": "1.0.0",
   "description": "bootstrap package.json from the documentation, supplemented with testing support",
   "angular-cli": {},
@@ -12,7 +12,9 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "test-once": "tsc && karma start karma.conf.js --single-run",
     "tsc": "tsc",
-    "tsc:w": "tsc -w"
+    "tsc:w": "tsc -w",
+    "prepublish": "gms",
+    "gms": "gms"
   },
   "keywords": [],
   "author": "",
@@ -28,14 +30,16 @@
     "@angular/platform-browser-dynamic": "^4.3.5",
     "@angular/platform-server": "^4.3.5",
     "@angular/router": "^4.3.5",
+    "@types/openlayers": "^4.1.5",
     "angular-in-memory-web-api": "~0.3.2",
     "core-js": "^2.4.1",
+    "ngx-openlayers": "^0.6.9",
+    "ol": "^4.3.1",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.4.3",
     "systemjs": "0.20.18",
     "zone.js": "^0.8.16",
-    "@types/openlayers": "^4.1.5",
-    "ol": "^4.3.1"
+    "ngx-openlayers": "0.6.9"
   },
   "devDependencies": {
     "@types/jasmine": "2.5.53",
