--- a/package.json
+++ b/package.json
@@ -12,39 +12,32 @@
     "test": "tsc && concurrently \"tsc -w\" \"karma start karma.conf.js\"",
     "test-once": "tsc && karma start karma.conf.js --single-run",
     "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "prepublish": "gms",
-    "gms": "gms"
+    "tsc:w": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^4.3.5",
-    "@angular/common": "^4.3.5",
-    "@angular/compiler": "^4.3.5",
-    "@angular/core": "^4.3.5",
-    "@angular/forms": "^4.3.5",
-    "@angular/http": "^4.3.5",
-    "@angular/platform-browser": "^4.3.5",
-    "@angular/platform-browser-dynamic": "^4.3.5",
-    "@angular/platform-server": "^4.3.5",
-    "@angular/router": "^4.3.5",
-    "@types/openlayers": "^4.1.5",
-    "angular-in-memory-web-api": "~0.3.2",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
-    "ngx-openlayers": "^0.6.9",
-    "ol": "^4.3.1",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "5.4.3",
-    "systemjs": "0.20.18",
-    "zone.js": "^0.8.16"
+    "rxjs": "^5.1.0",
+    "zone.js": "^0.8.4",
+    "ngx-openlayers": "0.6.9",
+    "angular-in-memory-web-api": "~0.3.2"
   },
   "devDependencies": {
+    "@angular/cli": "^1.3.2",
+    "@angular/compiler-cli": "^4.3.6",
     "@types/jasmine": "2.5.53",
     "@types/node": "^8.0.24",
     "@types/selenium-webdriver": "^3.0.4",
-    "angular-cli": "1.0.0-beta.28.3",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
     "http-server": "^0.10.0",
@@ -58,9 +51,11 @@
     "lodash": "^4.16.4",
     "protractor": "^5.1.2",
     "rimraf": "^2.5.4",
-    "tslint": "^5.6.0",
-    "typescript": "~2.4.2",
-    "webpack": "^3.5.5"
+    "webpack": "^3.5.5",
+    "ts-node": "~3.0.4",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3",
+    "systemjs": "0.20.18"
   },
   "repository": {}
 }
