--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.3.5",
+    "@angular/common": "^4.3.5",
+    "@angular/compiler": "^4.3.5",
+    "@angular/core": "^4.3.5",
+    "@angular/forms": "^4.3.5",
+    "@angular/http": "^4.3.5",
+    "@angular/platform-browser": "^4.3.5",
+    "@angular/platform-browser-dynamic": "^4.3.5",
+    "@angular/platform-server": "^4.3.5",
+    "@angular/router": "^4.3.5",
     "core-js": "^2.4.1",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4",
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.16",
     "ngx-openlayers": "0.6.9",
-    "angular-in-memory-web-api": "~0.3.2"
+    "angular-in-memory-web-api": "~0.3.2",
+    "systemjs": "0.20.18"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.2",
@@ -54,8 +57,7 @@
     "webpack": "^3.5.5",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3",
-    "systemjs": "0.20.18"
+    "typescript": "~2.3.3"
   },
   "repository": {}
 }
