--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.16",
     "ngx-openlayers": "0.6.9",
-    "angular-in-memory-web-api": "~0.3.2",
-    "systemjs": "0.20.18"
+    "angular-in-memory-web-api": "~0.3.2"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.2",
@@ -57,7 +56,8 @@
     "webpack": "^3.5.5",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "systemjs": "0.20.18"
   },
   "repository": {}
 }
